# FeGen

./: .gitignore  .gitmodules  CMakeLists.txt  Driver.py  MANIFEST.in  README.md  assign_stmt.py  expr1.py  requirements.txt  setpy.py  setup.py  test.py
FeGen/: __init__.py
FeGen/AttributeGrammar/: Grammar.py  Rule.py  __init__.py
Mojo/: README.md  requirements.txt
Mojo/grammar/: .gitignore  MojoLexer.g4  MojoLexerBase.py  MojoParser.g4  __init__.py  generate.sh
Mojo/src/: Driver.py  test.mojo
example/: Driver.py  assign_stmt.py  expr.fegen  expr.py  for.fegen  function_defination.py  test.fegen
example/Assign/: SymbolTable.py  assign_stmt.py
example/DynamicGrammar/: dynamic.py
example/Expression/: expr.py
example/SimpleC/: simpleC.py
example/ast/: deco_cls.py  decorator_fun.py  execute_ast.py  get_local.py  get_local_invasive.py  modify_ast.py  py_ast.py  trace.py
example/hidet/: codegen.py
example/ply/: expr.py  expr1.py  generate_ast.py  lex_def.py  module.py  parser.out  parsetab.py  zero_or_more.py  zero_or_one.py
example/toy/: codegen.py  constant.toy  function.toy  struct.toy  toy.py
example/xdsl/: func_defination.py
grammar/: .gitignore  FeGenLexer.g4  FeGenParser.g4  generate.sh
python/FeGen/: __init__.py
python/FeGen/AttributeGrammar/: ExecuteEngine.py  Rule.py  RuleDefinationTransformer.py  __init__.py
python/FeGen/grammar/: .gitignore  __init__.py
python/FeGen/runtime/: __init__.py
python/FeGen/runtime/Type/: Type.py  Value.py  __init__.py
python/FeGen/visitor/: Context.py  FeGenRuleVisitor.py  FeGenStmtBlockVisitor.py  Rule.py
runtime/: __init__.py
runtime/Statements/: For.py  IfElse.py  __init__.py
runtime/Type/: Integer.py  ListType.py  Type.py  Value.py  __init__.py
runtime/Value/: Literal.py
runtime/include/: ContextManager.h  Types.h
runtime/include/bindings/: ContextManagerWrapper.h  TypesWrapper.h  ValueWrapper.h
runtime/include/cores/: ContextManagerImpl.h  TypesImpl.h
runtime/lib/: CMakeLists.txt  ContextManager.cpp
runtime/lib/bindings/: CMakeLists.txt  ContextManagerWrapper.cpp  TypesWrapper.cpp  ValueWrapper.cpp  bindings.cpp
runtime/lib/cores/: CMakeLists.txt  ContextManagerImpl.cpp  TypesImpl.cpp
runtime/lib/type/: CMakeLists.txt  Types.cpp
runtime/python/: __init__.py
runtime/python/Statements/: __init__.py
script/: build_wheel.bash  gen_grammar.sh
test/Grammar/: test_grammar.py
test/Lexer/: test_lexer_defination.py  test_re_keywords.py  test_regular_expression.py
test/Parser/: test_parser_defination.py  test_recu.py
test/Sema/: add_expr.py  expr.py  expr1.py  test_alternative.py  test_attr.py  test_concat.py  test_get_attr.py  test_inh_syn_attr.py  test_one_or_more.py  test_prod.py  test_visit.py  test_zero_or_more.py  test_zero_or_one.py
visitor/: Context.py  FeGenStmtBlockVisitor.py  __init__.py
